style : 파비콘 삽입 및 안내문구 수정 1. favicon 삽입 2. 안내문구에 대하여 전반적인 문법 교정

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="referrer" content="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CAFESNAP</title>
+    <link rel="icon" href="./src/asset/favi32.png">
   </head>
   <body>
     <div id="root"></div>
